<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fi.vm.sade.valintaperusteet</groupId>
    <artifactId>ovara-valintalaskenta</artifactId>
    <version>7.1.1-SNAPSHOT</version>

    <parent>
        <groupId>fi.vm.sade.valintaperusteet</groupId>
        <artifactId>valintalaskenta</artifactId>
        <version>7.1.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <dependencies>
        <dependency>
            <groupId>fi.vm.sade.valintaperusteet</groupId>
            <artifactId>valintalaskenta-tulos-service</artifactId>
            <version>7.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>fi.vm.sade.valintaperusteet</groupId>
            <artifactId>valintalaskenta-laskenta-service</artifactId>
            <version>7.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>fi.vm.sade.valintaperusteet</groupId>
            <artifactId>valintalaskenta-domain</artifactId>
            <version>7.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
       <!-- <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>1.15.3</version>
            <scope>runtime</scope>
        </dependency>-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>1.19.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <finalName>ovara-valintalaskenta</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
                <executions>
                    <execution>
                        <id>write buildversion.txt</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo message="writing target/classes/static/buildversion.txt"/>
                                <!--suppress UnresolvedMavenProperty -->
                                <echo file="target/classes/static/buildversion.txt">
                                    <![CDATA[artifactId=${project.artifactId}
version=${project.version}
buildNumber=${buildNumber}
branchName=${branch}
vcsRevision=${revision}
buildTtime=${maven.build.timestamp}
]]>
                                </echo>
                                <loadfile property="buildversiontxt"
                                          srcFile="target/classes/static/buildversion.txt"/>
                                <!--suppress UnresolvedMavenProperty -->
                                <echo message="${buildversiontxt}"/>
                                <echo file="target/mavenversion.txt">${project.version}</echo>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <configuration>
                    <mainClass>fi.vm.sade.valintalaskenta.ovara.ajastus.OvaraApp</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <!-- Käytössä on vielä vanhoja kirjastoja jotka käyttävät reflektiota JDK-luokkien käpistelyyn -->
                            <Add-Opens>java.base/java.lang java.base/java.util java.base/java.math</Add-Opens>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
